# api/src/ShoppingCart/Order/Infrastructure/Request/OrderCreatorRequest.php
@@ -1,0 +1,14 @@
+<?php
+
+namespace ShoppingCart\Order\Infrastructure\Request;
+
+final readonly class OrderCreatorRequest
+{
+    public function __construct(
+        public string $cartId,
+        public string $name,
+        public string $address,
+        public CardRequest $card
+    ) {
+    }
+}
